--- a/index.html
+++ b/index.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>自我介绍</title>
-    <style type="text/css">
-        div{text-align:center;}
-    </style>
+  <meta charset="UTF-8">
+  <title>page1</title>
+  <link rel="stylesheet" type="text/css" href="style.css"/>
+
 </head>
 <body>
-    <div><h1>这里是学习html两时半的个人学习生一枚~</h1></div>
-    <div>
-        <tr>
-            <a href="个人信息.html" target="abc">个人信息</a>
-            <a href="8601a18b87d6277ff047afac28381f30e824fcc9.jpg" target="abc">个人照片</a>
-            <a href="想说的话.html" target="abc">想说的话</a>
-        </tr>
-    </div>
-   <div><iframe src="img.html" width="500" height="500" name="abc"/></div>
+
+<div class="box">
+  <div class="item"></div>
+  <a  class="a" href="page2.html" target="_self">点击跳转下一张</a>
+</div>
+
 
 </body>
 </html>
