--- a/page2.html
+++ b/page2.html
@@ -9,7 +9,7 @@
 
   <div class="box">
       <div class="item">
-         <div class="content"></div>
+         <div class="content_else"></div>
       </div>
       <a  class="a" href="page3.html" target="_self">点击跳转下一张</a>
   </div>
