--- a/page2/page5.html
+++ b/page2/page5.html
@@ -15,7 +15,7 @@
             </div>
         </div>
     </div>
-    <a  class="a" href="index.html" target="_self">点击跳转下一张</a>
+    <a  class="a" href="page1.html" target="_self">点击跳转下一张</a>
 </div>
 </body>
 </html>
