--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>page1</title>
-  <link rel="stylesheet" type="text/css" href="style.css"/>
-
+  <title>index</title>
+  <link rel="stylesheet" type="text/css" href="./page2/style.css"/>
 </head>
 <body>
 
-<div class="box">
-  <div class="item"></div>
-  <a  class="a" href="page2.html" target="_self">点击跳转下一张</a>
-</div>
+
+  <div class="box">
+	<div><a  class="a" href="./page1/first html.html" target="_self">第一次作业</a></div>
+
+  	<div><a  class="a" href="./page2/page1.html" target="_self">第二次作业</a>
+<div></div>
+  
+
 
 
 </body>
 </html>
+
