--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <div class="box">
 	<div><a  class="a" href="./page1/first html.html" target="_self">第一次作业</a></div>
-
   	<div><a  class="a" href="./page2/page1.html" target="_self">第二次作业</a>
+	<div><a  class="a" href="./page3/page3_index.html" target="_self">第三次作业</a>
 <div></div>
   
 
